--- a/java/S3ParquetSink/pom.xml
+++ b/java/S3ParquetSink/pom.xml
@@ -12,7 +12,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <target.java.version>11</target.java.version>
         <maven.compiler.source>${target.java.version}</maven.compiler.source>
-        <main.class>com.amazonaws.services.msf.StreamingJob</main.class>
 
         <scala.binary.version>2.12</scala.binary.version>
         <avro.version>1.10.2</avro.version>
@@ -244,7 +243,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${main.class}</mainClass>
+                                    <mainClass>com.amazonaws.services.msf.StreamingJob</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
