--- a/java/S3Sink/src/main/resources/log4j2.properties
+++ b/java/S3Sink/src/main/resources/log4j2.properties
@@ -8,7 +8,7 @@ appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
 #logger.verbose.additivity = false
 #logger.verbose.appenderRef.console.ref = ConsoleAppender
 
-rootLogger.level = INFO
+rootLogger.level = WARN
 rootLogger.appenderRef.console.ref = ConsoleAppender
 
 
